--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <!-- Custom fonts for this template -->
 
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="vendor/fontawesome-free/js/all.js" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
 
