--- a/index.html
+++ b/index.html
@@ -30,14 +30,12 @@
 
   <!-- Custom fonts for this template -->
 
-  <link href="vendor/fontawesome-free/js/all.js" rel="stylesheet">
-
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
 
- 
+  <script src="vendor/fontawesome-free/js/all.min.js"></script>
 
   <!-- Custom styles for this template -->
 
