Added project link

--- a/index.html
+++ b/index.html
@@ -415,6 +415,13 @@
                 </p>
 
               </li>
+                  
+              <li class=""><i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
+
+                <a class="text-50 mb-3" href="https://github.com/wongvik/BowlingLaneBooking">Link to repo
+                </a>
+
+              </li>
 
 
             </ul>
