Minor button look changes

--- a/RockPaperScissors/index.html
+++ b/RockPaperScissors/index.html
@@ -120,9 +120,9 @@ html>
             
             <!--Buttons for player to choose for the Rock Paper Scissor game-->
             <div id="buttons">
-                <input id="rock" type="button" onclick="winLose('rock')" value="Rock">
-                <input id="paper" type="button" onclick="winLose('paper')" value="Paper">
-                <input id="scissor" type="button" onclick="winLose('scissor')" value="Scissor">
+                <button id="rock" class="btn btn-primary" onclick="winLose('rock')" value="Rock">
+                <button id="paper" class="btn btn-primary" onclick="winLose('paper')" value="Paper">
+                <button id="scissor" class="btn btn-primary" onclick="winLose('scissor')" value="Scissor">
             </div>
             
             <!--Resets the gameboard and scoreboard for the user-->
