--- a/index.html
+++ b/index.html
@@ -266,6 +266,31 @@
               </div>
 
             </div>
+            
+            <ul class="fa-ul">
+
+              <li><i class="fa-li fa fa-code" aria-hidden="true"></i>
+
+                <p class="text-50 mb-3">Technology Used: <b>AngularJS, Javascript, SQL, C# .NET, HTML/CSS, Bootstrap
+                  , Confluence</b>
+                </p>
+
+              </li>
+
+              <li class=""><i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
+
+                <p class="text-50 mb-3">Upgraded BMO Capital Markets Prime Service portal to the newest AngularJS version, 
+                  solving potential security issues</p>
+
+              </li>
+
+              <li class=""><i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
+
+                <p class="text-50 mb-3">Created documents and tutorials on Confluence and SharePoint for other team members</p>
+
+              </li>
+
+            </ul>
 
           </div>
 
