--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
+                <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
               </li>
             </ul>
           </div>
@@ -210,7 +210,7 @@
               </div>
 
               <ul class="fa-ul">
-                <li class="">
+                <li>
                   <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                   <p class="text-50 mb-3">
@@ -218,7 +218,7 @@
                   </p>
                 </li>
 
-                <li class="">
+                <li>
                   <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                   <p class="text-50 mb-3">
@@ -251,14 +251,13 @@
 
                   <p class="text-50 mb-3">
                     Technology Used:
-                    <b
-                      >AngularJS, Javascript, SQL, C# .NET, HTML/CSS, Bootstrap
-                      , Confluence</b
-                    >
+                    <b>AngularJS, Javascript, SQL, C# .NET, HTML/CSS, Bootstrap
+                      , Confluence
+                    </b>
                   </p>
                 </li>
 
-                <li class="">
+                <li>
                   <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                   <p class="text-50 mb-3">
@@ -267,7 +266,7 @@
                   </p>
                 </li>
 
-                <li class="">
+                <li>
                   <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                   <p class="text-50 mb-3">
@@ -308,7 +307,7 @@
                   </p>
                 </li>
 
-                <li class="">
+                <li>
                   <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                   <p class="text-50 mb-3">
@@ -318,7 +317,7 @@
                   </p>
                 </li>
 
-                <li class="">
+                <li>
                   <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                   <p class="text-50 mb-3">
@@ -328,7 +327,7 @@
                   </p>
                 </li>
 
-                <li class="">
+                <li>
                   <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                   <p class="text-50 mb-3">
@@ -337,7 +336,7 @@
                   </p>
                 </li>
 
-                <li class="">
+                <li>
                   <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                   <p class="text-50 mb-3">
@@ -346,7 +345,7 @@
                   </p>
                 </li>
 
-                <li class="">
+                <li>
                   <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                   <p class="text-50 mb-3">
@@ -376,7 +375,7 @@
 
           <div class="row details">
             <div class="col-lg">
-              <h4>Sheridan College Bike Hub Website</h4>
+              <h4>Sheridan College Bike Hub</h4>
 
               <div class="row mb-3">
                 <div class="col-lg">
@@ -390,7 +389,7 @@
                       </p>
                     </li>
 
-                    <li class="">
+                    <li>
                       <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                       <p class="text-50 mb-3">
@@ -399,7 +398,7 @@
                       </p>
                     </li>
 
-                    <li class="">
+                    <li>
                       <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                       <p class="text-50 mb-3">
@@ -409,7 +408,7 @@
                       </p>
                     </li>
 
-                    <li class="">
+                    <li>
                       <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                       <p class="text-50 mb-3">
@@ -417,7 +416,7 @@
                       </p>
                     </li>
 
-                    <li class="">
+                    <li>
                       <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
                       <a
                         class="text-50 mb-3"
@@ -426,7 +425,7 @@
                       </a>
                     </li>
 
-                    <li class="">
+                    <li>
                       <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
                       <a
                         class="text-50 mb-3"
@@ -444,7 +443,7 @@
 
           <div class="row details">
             <div class="col-lg">
-              <h4>Slack Chat Bot - Live Helper</h4>
+              <h4>Live Helper</h4>
 
               <div class="row mb-3">
                 <div class="col-lg">
@@ -453,7 +452,7 @@
                       <i class="fa-li fa fa-code" aria-hidden="true"></i>
 
                       <p class="text-50 mb-3">
-                        <b> RBC Innovation Challenge </b>
+                        <b> RBC Innovation Challenge - Slack Chat Bot</b>
                       </p>
                     </li>
 
@@ -465,7 +464,7 @@
                       </p>
                     </li>
 
-                    <li class="">
+                    <li>
                       <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                       <p class="text-50 mb-3">
@@ -496,7 +495,7 @@
                       </p>
                     </li>
 
-                    <li class="">
+                    <li>
                       <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                       <p class="text-50 mb-3">
@@ -505,7 +504,7 @@
                       </p>
                     </li>
 
-                    <li class="">
+                    <li>
                       <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                       <a
@@ -538,7 +537,7 @@
                       </p>
                     </li>
 
-                    <li class="">
+                    <li>
                       <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                       <p class="text-50 mb-3">
@@ -570,7 +569,7 @@
                       </p>
                     </li>
 
-                    <li class="">
+                    <li>
                       <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                       <p class="text-50 mb-3">
@@ -602,7 +601,7 @@
                       </p>
                     </li>
 
-                    <li class="">
+                    <li>
                       <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                       <p class="text-50 mb-3">
@@ -611,7 +610,7 @@
                       </p>
                     </li>
 
-                    <li class="">
+                    <li>
                       <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                       <a class="text-50 mb-3" href="./RockPaperScissors"
@@ -657,7 +656,7 @@
               </div>
 
               <ul class="fa-ul">
-                <li class="">
+                <li>
                   <p class="text-50 mb-3">Cumulative GPA of 3.85 / 4.0</p>
                 </li>
               </ul>
@@ -665,7 +664,7 @@
               <h5>Relevant courses:</h5>
 
               <ul class="fa-ul">
-                <li class="">
+                <li>
                   <div class="row">
                     <div class="col-lg">
                       <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
@@ -706,7 +705,7 @@
 
       <!-- Contact Section -->
 
-      <section class="contact-section bg-black">
+      <section id="contact" class="contact-section bg-black">
         <div class="container">
           <div class="social d-flex justify-content-center">
             <a href="https://www.linkedin.com/in/vikki-wong/" class="mx-2">
