--- a/index.html
+++ b/index.html
@@ -402,9 +402,7 @@
                       <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                       <p class="text-50 mb-3">
-                        Results are generated based on the relevance of solution
-                        to the question; Analysts are able to upvote / downvote
-                        each solution, further optimizing the results
+                        Created Rest API with Java Spring, Hibernate
                       </p>
                     </li>
 
@@ -412,27 +410,11 @@
                       <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
 
                       <p class="text-50 mb-3">
-                        Work in a team of 4 with Agile Methodology
+                        Work in a team of 4 with Agile Methodology, gathered business requirements from clients 
                       </p>
                     </li>
 
-                    <li>
-                      <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
-                      <a
-                        class="text-50 mb-3"
-                        href="https://github.com/SamLuo835/CapstoneFront"
-                        >Link to Website repo
-                      </a>
-                    </li>
-
-                    <li>
-                      <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
-                      <a
-                        class="text-50 mb-3"
-                        href="https://github.com/augustoapg/CapstoneJavaBack"
-                        >Link to API repo
-                      </a>
-                    </li>
+                    
                   </ul>
                 </div>
               </div>
@@ -470,6 +452,16 @@
                       <p class="text-50 mb-3">
                         Users are able to search through ElasticSearch database
                         for possible solutions
+                      </p>
+                    </li>
+                    
+                     <li>
+                      <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
+
+                      <p class="text-50 mb-3">
+                        Results are generated based on the relevance of solution
+                        to the question; Analysts are able to upvote / downvote
+                        each solution, further optimizing the results
                       </p>
                     </li>
                   </ul>
