--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
               <ul class="fa-ul">
                 <li>
-                  <i class="fa-li fa fa-code" aria-hidden="true"></i>
+                  <i class="fa fa-angle-double-right" aria-hidden="true"></i>
 
                   <p class="text-50 mb-3">
                     Technology Used:
@@ -296,7 +296,7 @@
 
               <ul class="fa-ul">
                 <li>
-                  <i class="fa-li fa fa-code" aria-hidden="true"></i>
+                  <i class="fa fa-angle-double-right" aria-hidden="true"></i>
 
                   <p class="text-50 mb-3">
                     Technology Used:
@@ -381,7 +381,7 @@
                 <div class="col-lg">
                   <ul class="fa-ul">
                     <li>
-                      <i class="fa-li fa fa-code" aria-hidden="true"></i>
+                      <i class="fa fa-angle-double-right" aria-hidden="true"></i>
 
                       <p class="text-50 mb-3">
                         Technology Used:
@@ -431,7 +431,7 @@
                 <div class="col-lg">
                   <ul class="fa-ul">
                     <li>
-                      <i class="fa-li fa fa-code" aria-hidden="true"></i>
+                      <i class="fa fa-angle-double-right" aria-hidden="true"></i>
 
                       <p class="text-50 mb-3">
                         <b> RBC Innovation Challenge - Slack Chat Bot</b>
@@ -439,7 +439,7 @@
                     </li>
 
                     <li>
-                      <i class="fa-li fa fa-code" aria-hidden="true"></i>
+                      <i class="fa fa-angle-double-right" aria-hidden="true"></i>
 
                       <p class="text-50 mb-3">
                         Technology Used: <b> Python, Elastic Search </b>
@@ -480,7 +480,7 @@
                 <div class="col-lg">
                   <ul class="fa-ul">
                     <li>
-                      <i class="fa-li fa fa-code" aria-hidden="true"></i>
+                      <i class="fa fa-angle-double-right" aria-hidden="true"></i>
 
                       <p class="text-50 mb-3">
                         Technology Used: <b> ASP.NET Core, SQL, HTML5/CSS</b>
@@ -521,7 +521,7 @@
                 <div class="col-lg">
                   <ul class="fa-ul">
                     <li>
-                      <i class="fa-li fa fa-code" aria-hidden="true"></i>
+                      <i class="fa fa-angle-double-right" aria-hidden="true"></i>
 
                       <p class="text-50 mb-3">
                         Technology Used:
@@ -553,7 +553,7 @@
                 <div class="col-lg">
                   <ul class="fa-ul">
                     <li>
-                      <i class="fa-li fa fa-code" aria-hidden="true"></i>
+                      <i class="fa fa-angle-double-right" aria-hidden="true"></i>
 
                       <p class="text-50 mb-3">
                         Technology Used:
@@ -585,7 +585,7 @@
                 <div class="col-lg">
                   <ul class="fa-ul">
                     <li>
-                      <i class="fa-li fa fa-code" aria-hidden="true"></i>
+                      <i class="fa fa-angle-double-right" aria-hidden="true"></i>
 
                       <p class="text-50 mb-3">
                         Technology Used:
