Updated website link

--- a/index.html
+++ b/index.html
@@ -420,7 +420,17 @@
                       <a
                         class="text-50 mb-3"
                         href="https://github.com/augustoapg/CapstoneJavaBack"
-                        >Link to repo
+                        >Link to Java Backend
+                      </a>
+                    </li>
+
+                    <li>
+                      <i class="fa-li fa fa-angle-right" aria-hidden="true"></i>
+
+                      <a
+                        class="text-50 mb-3"
+                        href="luojianl.dev.fast.sheridanc.on.ca/capstone/#/home"
+                        >Link to live website
                       </a>
                     </li>
                     
