--- a/test.html
+++ b/test.html
@@ -2,5 +2,5 @@
     title="ServiceNow Virtual Agent Client"
     width="600"
     height="900"
-    src="https://rbcfgdev.service-now.com/$chat_support.do?queueID=f66060aadb64a304aac736ee9d9619af">
+    src="https://rbcfg001.service-now.com/$chat_support.do?queueID=f66060aadb64a304aac736ee9d9619af">
 </iframe>
