--- a/testing.html
+++ b/testing.html
@@ -4,3 +4,10 @@
     height="900"
     src="https://rbcfg001.service-now.com/$chat_support.do?queueID=f66060aadb64a304aac736ee9d9619af">
 </iframe>
+
+<iframe id="sn_va_web_client"
+    title="ServiceNow Virtual Agent Client"
+    width="600"
+    height="900"
+    src="https://rbcfg001.service-now.com/sn_va_web_client_app_embed.do">
+</iframe>
