--- a/testing.html
+++ b/testing.html
@@ -11,3 +11,6 @@
     height="900"
     src="https://rbcfg001.service-now.com/sn_va_web_client_app_embed.do">
 </iframe>
+
+
+<script src="https://rbcfg001.service-now.com/$chat_support.do?queueID=f66060aadb64a304aac736ee9d9619af"></script>
